--- a/Client/BlazorApp/Components/Pages/CreatePost.razor
+++ b/Client/BlazorApp/Components/Pages/CreatePost.razor
@@ -1,5 +1,7 @@
 ﻿@page "/createpost"
+@using BlazorApp.Services
 @rendermode InteractiveServer
+@inject IPostService postService
 <h3>Create A Post</h3>
 
 @code {
