--- a/Client/BlazorApp/Components/Layout/NavMenu.razor
+++ b/Client/BlazorApp/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
@@ -15,36 +15,19 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="AddUser">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AddNewUser
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Add User
             </NavLink>
         </div>
-         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="createpost">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Create Post
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CreatePost">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Create Post
             </NavLink>
         </div>
-         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="viewallpost">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ViewAllPost
-            </NavLink>
-        </div>
-         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="postdetail">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ViewPostDetail
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ViewPosts">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> View Posts
             </NavLink>
         </div>
     </nav>
 </div>
-
