--- a/Client/BlazorApp/Components/Pages/AddUser.razor
+++ b/Client/BlazorApp/Components/Pages/AddUser.razor
@@ -1,7 +1,6 @@
 ﻿@page "/AddUser"
 @using BlazorApp.Services
-@using DTOs
-
+@rendermode InteractiveServer
 
 @* here we inject the IUserService. This page does not know the implementation uses http to contact a web api. It could have just been a local list*@
 @inject IUserService UserService  
@@ -10,13 +9,15 @@
 
 <div>
     <div>
-        <label>User name:</label>
+        <label>Username:</label>
         <input type="text" @bind="userName"/>
     </div>
+    <br>
     <div>
         <label>Password:</label>
         <input type="text" @bind="password"/>
     </div>
+    <br>
     <div>
         <label>Retype password:</label>
         <input type="text" @bind="passwordAgain"/>
@@ -27,6 +28,7 @@
             <label>@message</label>
         </div>
     }
+    <br>
     <div>
         <button @onclick="CreateUser" class="btn btn-primary">Save</button>
     </div>
