--- a/Client/BlazorApp/Components/Pages/Home.razor
+++ b/Client/BlazorApp/Components/Pages/Home.razor
@@ -1,16 +1,9 @@
 ﻿@page "/"
 @inject NavigationManager NavMgr
+@rendermode InteractiveServer
+
 <PageTitle>Home</PageTitle>
 
 <h1>Reddit Clone</h1>
 
-<AuthorizeView>
-    <Authorized>
-        <h3>Hello, @context.User.Identity.Name</h3>
-    </Authorized>
-    <NotAuthorized>
-        lol you are not logged in!
-    </NotAuthorized>
-</AuthorizeView>
-Here you can browse interesting posts.
-<button @onclick='() => NavMgr.NavigateTo("login")'>go to login</button>
+<p>Welcome to Forum app</p>
