--- a/Client/BlazorApp/Components/_Imports.razor
+++ b/Client/BlazorApp/Components/_Imports.razor
@@ -5,8 +5,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Mvc.Rendering
 @using Microsoft.JSInterop
 @using BlazorApp
 @using BlazorApp.Components
 @using BlazorApp.Services
 @using Microsoft.AspNetCore.Authorization
+@using DTOs
