--- a/Client/BlazorApp/Components/Pages/CreatePost.razor
+++ b/Client/BlazorApp/Components/Pages/CreatePost.razor
@@ -1,29 +1,33 @@
 ﻿@page "/CreatePost"
-@using BlazorApp.Services
-@using System.Security.Claims
-@using DTOs
-@using Microsoft.AspNetCore.Components.Authorization
- Microsoft.AspNetCore.Authorization
 @inject IPostService PostService
 @inject NavigationManager NavMgr
-@attribute [Authorize]
+@rendermode InteractiveServer
 
 <div>
     <h3>CreatePost</h3>
+    <br>
     <div>
         <label>Title:</label>
         <input type="text" @bind="title"/>
     </div>
+    <br>
     <div>
         <label>Body:</label>
         <textarea @bind="body"></textarea>
     </div>
+    <br>
+    <div>
+        <label>AuthorUserId:</label>
+        <input type="text" @bind="currentUserId"/>
+    </div>
+    <br>
     @if (!string.IsNullOrEmpty(message))
     {
         <div>
             <label>@message</label>
         </div>
     }
+    <br>
     <div>
         <button @onclick="Create">Create Post</button>
     </div>
@@ -33,23 +37,8 @@
     private string title = string.Empty;
     private string body = string.Empty;
     private string message = string.Empty;
-    [CascadingParameter] public Task<AuthenticationState> State { get; set; } = null!; // suppressing null warning by assigning to null!. I know this will be set when the page is loaded, from OnInitializedAsync().
 
     private int? currentUserId;
-
-    protected override async Task OnInitializedAsync()
-    {
-        AuthenticationState authenticationState = await State;
-        ClaimsPrincipal claimsPrincipal = authenticationState.User;
-        if(claimsPrincipal.Identity is not null && claimsPrincipal.Identity.IsAuthenticated)
-        {
-            if (int.TryParse(claimsPrincipal.FindFirst("Id")?.Value, out int result))
-            {
-                currentUserId = result;
-            }
-        }
-    }
-
     private async Task Create()
     {
         message = string.Empty; // setting message to "" to clear any previous messages
